--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -83,6 +83,7 @@ html, body {
 	background-color: #0081C2;
 	background-image: -webkit-linear-gradient(top, #08C, #0077B3);
 	background-image:    -moz-linear-gradient(top, #08C, #0077B3);
+	background-image:     -ms-linear-gradient(top, #08C, #0077B3);
 	background-image:         linear-gradient(top, #08C, #0077B3);
 }
 
