--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -1,5 +1,9 @@
 /* FORM VIEW */
 
+::-ms-clear {
+  display: none;
+}
+
 .view-container .form-view > div:last-child {
 	position: absolute;
 	top: 48px;
@@ -81,7 +85,7 @@ table.form-layout td.form-item.v-align-top {
 
 .form-item-container,
 .form-item-container > span.display-text {
-	min-height: 24px;
+	min-height: 26px;
 	display: block;
 }
 
@@ -117,13 +121,15 @@ table.form-layout td.form-item.v-align-top {
 
 table.form-layout td.form-item input {
 	min-width: 170px;
-	height: 24px;
+	height: 26px;
+	padding: 2px 6px;
+	outline-style: none;
 }
 
 table.form-layout td.form-item .small-input input,
 table.form-layout td.form-item input.small-input {
 	min-width: 50px;
-	height: 24px;
+	height: 26px;
 }
 
 table.form-layout td.form-item input[type="radio"],
@@ -141,6 +147,7 @@ table.form-layout td.form-item.select-item {
 table.form-layout td.form-item button {
 	padding: 2px 10px 2px;
 	min-width: 26px;
+	height: 26px;
 	overflow: hidden;
 	white-space: nowrap;
 }
@@ -191,6 +198,7 @@ table.form-layout td.form-item .input-append button {
 	cursor: pointer;
 	margin-right: 2px;
 	padding: 2px;
+	padding-top: 3px;
 	display: inline-block;
 	line-height: 20px;
 }
@@ -611,6 +619,7 @@ table.field-details .help-text hr {
 	border-radius: 4px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	transition: border linear .2s, box-shadow linear .2s;
+	height: 26px;
 }
 
 .tag-select.picker-input {
@@ -643,7 +652,7 @@ table.field-details .help-text hr {
 .tag-select li {
 	float: left;
 	display: inline-block;
-	margin: 2px;
+	margin: 3px;
 	margin-right: 0;
 	margin-bottom: 0;
 }
@@ -682,9 +691,9 @@ table.field-details .help-text hr {
 	width: 50px;
 	min-width: 50px !important;
 	margin: 0;
-	padding: 0;
+	padding: 0 !important;
 	margin-left: 2px;
-	margin-top: -2px;
+	margin-top: -1px;
 	line-height: 16px;
 	height: auto !important;
 }
