--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -4,7 +4,8 @@
 	    <button class="btn" ng-click="onNew()" ng-if="hasButton('new')"><i class="icon icon-file"></i> <span x-translate>New</span></button>
 	    <button class="btn" ng-click="onEdit()" ng-if="hasButton('edit') && canEdit()"><i class="icon icon-pencil"></i> <span x-translate>Edit</span></button>
 	    <button class="btn" ng-click="onSave()" ng-if="hasButton('save') && !canEdit()"><i class="icon icon-save"></i> <span x-translate>Save</span></button>
-	    <button class="btn" ng-click="onCopy()" ng-if="hasButton('copy')" ng-disabled="!canCopy()"><i class="icon icon-copy"></i> <span x-translate>Copy</span></button>
+	    <button class="btn" ng-click="onCopy()" ng-if="hasButton('copy') && canEdit()" ng-disabled="!canCopy()"><i class="icon icon-copy"></i> <span x-translate>Copy</span></button>
+	    <button class="btn" ng-click="onCancel()" ng-if="hasButton('cancel') && !canEdit()" ng-disabled="!canCancel()"><i class="icon icon-ban-circle"></i> <span x-translate>Cancel</span></button>
 	  </div>
 	  <div class="btn-group">
 		<button class="btn" ng-click="onBack()" ng-if="hasButton('back')" ng-disabled="!canBack()"><i class="icon icon-reply"></i> <span x-translate>Back</span></button>
