--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -605,7 +605,8 @@ table.field-details .help-text hr {
 	border-radius: 4px;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	transition: border linear .2s, box-shadow linear .2s;
-	height: 26px;
+	min-height: 26px;
+	height: 100%;
 }
 
 .tag-select.picker-input {
@@ -734,4 +735,8 @@ table.field-details .help-text hr {
 
 .button-item.img-button span {
 	display: block;
+}
+
+.button-item.icon-only {
+	text-decoration: none;
 }
