--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -348,13 +348,13 @@ td.form-item > * {
 .form-item .form-item-container.ng-invalid > .picker-input input,
 .form-item .form-item-container.ng-invalid > .ui-spinner input,
 .form-item .form-item-container.ng-invalid > input,
+.form-item .form-item-container.ng-invalid > .tag-select,
 .form-item .input-append.ng-invalid > input,
 .form-item .picker-input.ng-invalid > input {
 	border-color: #B94A48;
 }
 
 .form-item .form-item-container.ng-invalid:focus,
-.form-item .input-append.ng-invalid > input:focus,
 .form-item .form-item-container.ng-invalid > input:focus,
 .form-item .picker-input.ng-invalid > input:focus {
 	border-color: #953B39;
@@ -626,6 +626,15 @@ table.field-details .help-text hr {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 	   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 	        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+
+.ng-invalid > .tag-select:focus,
+.ng-invalid > .tag-select.focus {
+	border-color: #953B39;
+	
+	-webkit-box-shadow: 0 0 6px #D59392;
+	   -moz-box-shadow: 0 0 6px #D59392;
+	        box-shadow: 0 0 6px #D59392;
 }
 
 .tag-select ul {
