Initial work on tree view.

--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -8,6 +8,9 @@
 
 @import url('../lib/slickgrid/slick.grid.css');
 
+@import url('../lib/jquery.treetable/css/jquery.treetable.css');
+@import url('../lib/jquery.treetable/css/jquery.treetable.theme.default.css');
+
 @import url('../lib/fullcalendar/fullcalendar.css');
 @import url('../lib/fullcalendar/fullcalendar.print.css') print;
 
