Adopted navtree style (TreeView)

--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -25,6 +25,7 @@
 @import url('slickgrid.css');
 
 @import url('view.form.css');
+@import url('view.tree.css');
 @import url('view.portal.css');
 @import url('view.calendar.css');
 @import url('view.trail.css');
