--- a/axelor-web/src/main/webapp/lib/jquery.treetable/css/jquery.treetable.theme.default.css
+++ b/axelor-web/src/main/webapp/lib/jquery.treetable/css/jquery.treetable.theme.default.css
@@ -18,7 +18,7 @@ table.treetable thead {
 table.treetable thead tr th {
   border: 1px solid #888;
   font-weight: normal;
-  padding: 4px;
+  padding: .3em 1em;
   text-align: left;
 }
 
