--- a/axelor-web/src/main/webapp/css/view.tree.css
+++ b/axelor-web/src/main/webapp/css/view.tree.css
@@ -3,7 +3,6 @@
 	top: 48px;
 	bottom: 0; left: 0; right: 0;
 	border: 1px solid #DDD;
-	overflow: auto;
 }
 
 table.treetable {
@@ -13,41 +12,6 @@ table.treetable {
 
 table.treetable tr {
 	line-height: 18px;
-}
-
-table.treetable thead {
-	color: #333;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	
-	background-color: #f5f5f5;
-	background-repeat: repeat-x;
-
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
-	background-image: -webkit-linear-gradient(top, white, #E6E6E6);
-	background-image:    -moz-linear-gradient(top, white, #E6E6E6);
-	background-image:     -ms-linear-gradient(top, white, #E6E6E6);
-	background-image:      -o-linear-gradient(top, white, #E6E6E6);
-	background-image:         linear-gradient(top, white, #E6E6E6);
-	
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	   -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	        box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-	
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-}
-
-table.treetable thead tr th {
-	border: 1px solid #DDD;
-	border-bottom: 1px solid #d4d4d4;
-	border-top: none;
-}
-
-table.treetable thead tr th:first-of-type {
-	border-left: none;
-}
-
-table.treetable thead tr th:last-of-type {
-	border-right: none;
 }
 
 table.treetable tbody tr.branch {
@@ -74,4 +38,51 @@ table.treetable tbody tr.selected {
 table.treetable tbody tr.accept {
   background-color: #a3bce4;
   color: #fff
+}
+
+.tree-view .tree-header {
+	
+	height: 24px;
+	
+	color: #333;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	
+	background-color: #f5f5f5;
+	background-repeat: repeat-x;
+
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#E6E6E6));
+	background-image: -webkit-linear-gradient(top, white, #E6E6E6);
+	background-image:    -moz-linear-gradient(top, white, #E6E6E6);
+	background-image:     -ms-linear-gradient(top, white, #E6E6E6);
+	background-image:      -o-linear-gradient(top, white, #E6E6E6);
+	background-image:         linear-gradient(top, white, #E6E6E6);
+	
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+}
+
+.tree-view .tree-header {
+	width: 100%;
+	white-space: nowrap;
+	border-bottom: 1px solid #d2d2d2;
+}
+
+.tree-view .tree-header th {
+	display: inline-block;
+	height: 100%;
+	padding: 4px;
+	padding-left: 6px;
+	
+	border-left: 1px solid #ddd;
+	
+	text-align: left;
+}
+
+.tree-view .tree-header th:first-of-type {
+	border-left: none;
+}
+
+.tree-view .tree-table {
+	overflow: auto;
+	position: absolute;
+	top: 27px; left: 0; right: 0; bottom: 0;
 }
