--- a/axelor-web/src/main/webapp/partials/views/grid.html
+++ b/axelor-web/src/main/webapp/partials/views/grid.html
@@ -15,13 +15,7 @@
 	  	<button ng-repeat="btn in toolbar" class="btn" ui-tool-button="btn">{{btn.title}}</button>
 	  </div>
 	  <div ui-view-switcher class="pull-right"></div>
-	  <div class="record-pager pull-right">
-	    <span>{{pagerText()}}</span>
-	    <div class="btn-group">
-	      <button class="btn" ng-disabled="!canPrev()" ng-click="onPrev()"><i class="icon-chevron-left"></i></button>
-	      <button class="btn" ng-disabled="!canNext()" ng-click="onNext()"><i class="icon-chevron-right"></i></button>
-	    </div>
-	  </div>
+	  <div ui-record-pager class="pull-right"></div>
 	</div><!--/.btn-toolbar -->
   <div ui-view-grid x-view="schema" x-data-view="dataView" x-handler="this"></div>
 </div>
