Improved header menu plugin.
- support for separator item
- support for html content
- support for menu position

--- a/axelor-web/src/main/webapp/lib/slickgrid/plugins/slick.headermenu.css
+++ b/axelor-web/src/main/webapp/lib/slickgrid/plugins/slick.headermenu.css
@@ -36,6 +36,12 @@
   cursor: pointer;
 }
 
+.slick-header-menusep {
+	height: 1px;
+	background-color: silver;
+	margin: 2px;
+}
+
 .slick-header-menuicon {
   display: inline-block;
   width: 16px;
