--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -7,6 +7,7 @@
 @import url('../lib/jquery.timepicker/jquery-ui-timepicker-addon.css');
 
 @import url('../lib/slickgrid/slick.grid.css');
+@import url('../lib/slickgrid/plugins/slick.headermenu.css');
 
 @import url('../lib/jquery.treetable/css/jquery.treetable.css');
 @import url('../lib/jquery.treetable/css/jquery.treetable.theme.default.css');
